# envmcp-cursor

./: .flake8  .gitignore  .python-version  CONTRIBUTING.md  PUBLISHING.md  README.md  noxfile.py  pyproject.toml  renovate.json  requirements-dev.txt  ruff.toml  sample.env.mcp
.github/workflows/: ci.yml  dependencies-security.yml  lint.yml  publish.yml  release.yml  test.yml
envmcp/: __init__.py  cli.py  core.py  executor.py
tests/: test_cli.py  test_core.py
